# EverAgent

./: .gitignore  .project-task-state  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  llm-wiki-plan.md
github-trending-analyzer/: .project-task-state  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  TASK_PROTOCOL.md  pyproject.toml
github-trending-analyzer/github-deep-research/: SKILL.md
github-trending-analyzer/github-trending-analyzer/: SKILL.md  report_generator.py  trending_fetcher.py
github-trending-analyzer/github-trending-reports/: all-daily-summary-2026-03-17.md  all-daily-summary-2026-03-22.md  all-daily-summary-2026-03-24.md  all-daily-summary-2026-03-25.md  all-daily-summary-2026-03-26.md  all-daily-summary-2026-03-27.md  all-daily-summary-2026-04-05.md  all-monthly-summary-2026-03-17.md  all-monthly-summary-2026-03-18.md  all-weekly-summary-2026-03-17.md  research_666ghj_BettaFish.md  research_666ghj_MiroFish.md  research_AstrBotDevs_AstrBot.md  research_BerriAI_litellm.md  research_Blaizzy_mlx-vlm.md  research_Crosstalk-Solutions_project-nomad.md  research_EverMind-AI_EverOS.md  research_FujiwaraChoki_MoneyPrinterV2.md  research_HKUDS_LightRAG.md  research_NousResearch_hermes-agent.md  research_TauricResearch_TradingAgents.md  research_Vaibhavs10_insanely-fast-whisper.md  research_Yeachan-Heo_oh-my-claudecode.md  research_Yeachan-Heo_oh-my-codex.md  research_abhigyanpatwari_GitNexus.md  research_affaan-m_everything-claude-code.md  research_agentscope-ai_agentscope.md  research_alibaba_OpenSandbox.md  research_alibaba_page-agent.md  (+55 more)
(+398 files in other folders)
