[project]
name = "everagent-github-trending-analyzer"
version = "0.1.0"
description = "Utility scripts for fetching GitHub trending data and generating reports."
readme = "github-trending-analyzer/SKILL.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
